# aquawatch

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/aquawatch/: __init__.py  cli.py  models.py  report.py  simulator.py
src/aquawatch/analyzer/: __init__.py  contamination.py  predictor.py  quality_index.py
src/aquawatch/sensors/: __init__.py  conductivity.py  dissolved_oxygen.py  ph.py  temperature.py  turbidity.py
tests/: test_analyzer.py  test_benchmark.py  test_cli.py  test_core.py  test_integration.py  test_models.py  test_report.py  test_sensors.py  test_simulator.py
